feat: refactor App component to use Counter component, update styles, and enhance ESLint validation

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,5 @@
-@use "./_base.scss";
+/* Base styles */
+@forward "./_base.scss";
+
+/* Component styles */
+@forward "../components/Counter/_Counter.scss";
